@@ -12,16 +12,15 @@ rb-open-item-hotkey=Öffne gehaltenen Gegenstand, beim drücken des Hotkeys. [im
 rb-open-fluid-hotkey=Öffne ausgewählte Flüssigkeit, beim drücken des Hotkeys. [img=info]
 rb-show-hidden-objects=Zeige versteckte Objekte
 rb-show-unresearched-objects=Zeige unerforschte Objekte
-rb-use-fuzzy-search=Nutze ungenaue Suche [img=info]
-rb-default-search-category=Standard Suchkategorie
-rb-show-internal-names=Zeige interne Namen [img=info]
 rb-show-glyphs=Zeige Objekttyp-Glyphen
+rb-use-fuzzy-search=Nutze ungenaue Suche [img=info]
+rb-use-internal-names=Zeige interne Namen [img=info]
 
 [mod-setting-description]
 rb-open-item-hotkey=Wenn aktiviert, wird beim drücken des Bauplanbuch Hotkeys, wenn man einen Gegenstand in der Hand hält, dessen Materialseite geöffnet, wenn Sie existiert.\nDu kannst dies auch machen, wenn du die BB Abkürzung drückst, wenn du einen Gegenstand in der Hand hälst.
 rb-open-fluid-hotkey=Wenn aktiviert, wird beim drücken des Bauplanbuch Hotkeys, wenn man über einem Rohr, einer Pumpe, einem Lagertank, oder einem Tangwaggon schwebt, dessen Materialseite geöffnet, wenn Sie existiert.
 rb-use-fuzzy-search=Mildere Mustererkennung für Suchvorgänge.
-rb-show-internal-names=Zeige die internen Prototypennamen von jedem Objekt, anstatt der Übersetzung. Du kannst weiterhin die Übersetzung sehen, in dem Objekt Tooltip.
+rb-use-internal-names=Zeige die internen Prototypennamen von jedem Objekt, anstatt der Übersetzung. Du kannst weiterhin die Übersetzung sehen, in dem Objekt Tooltip.
 
 [shortcut-name]
 rb-toggle-gui=Bauplanbuch
