@@ -12,16 +12,15 @@ rb-open-item-hotkey=Open held item on hotkey [img=info]
 rb-open-fluid-hotkey=Open selected fluid on hotkey [img=info]
 rb-show-hidden-objects=Show hidden objects
 rb-show-unresearched-objects=Show unresearched objects
-rb-use-fuzzy-search=Use fuzzy search [img=info]
-rb-default-search-category=Default search category
-rb-show-internal-names=Show internal names [img=info]
 rb-show-glyphs=Show object type glyphs
+rb-use-fuzzy-search=Use fuzzy search [img=info]
+rb-use-internal-names=Use internal names [img=info]
 
 [mod-setting-description]
 rb-open-item-hotkey=If enabled, using the Recipe Book hotkey while holding an item will open that item's material page, if it exists.\nYou can also do this by clicking the RB shortcut while holding an item.
 rb-open-fluid-hotkey=If enabled, using the Recipe Book hotkey while hovering over a pipe, pump, storage tank, or fluid wagon will open that fluid's material page, if it exists.
 rb-use-fuzzy-search=More lenient pattern matching for searches.
-rb-show-internal-names=Show the internal prototype name of each object, instead of the translation. You can still view the translation in the object's tooltip.
+rb-use-internal-names=Use internal prototype names for objects and searching. You can still view an object's translation in its tooltip.
 
 [shortcut-name]
 rb-toggle-gui=Recipe Book
