@@ -1,0 +1,3 @@
+{
+  "mod-setting": [["rb-show-internal-names", "rb-use-internal-names"]]
+}
